SummaryReportWriter fixed